--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,138 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.app {
+  background-image: url('./assets/ColdGif.gif');
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4s ease-in-out;
+}
+
+.app.warm {
+  background-image: url('./assets/HotGif.gif');
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4s ease-in-out;
+}
+
+.app.neutral {
+  background-image: url('./assets/NeutralGif.gif');
+  background-size: cover;
+  background-position: bottom;
+  transition: 0.4s ease-in-out;
+}
+
+main {
+  min-height: 100vh;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(228, 252, 121, 0.089),
+    rgb(0, 0, 0)
+  );
+  padding: 25px;
+}
+
+.search-box {
+  width: 100%;
+  margin: 0 0 75px;
+}
+
+.search-box .search-bar {
+  display: block;
+  width: 100%;
+  padding: 15px;
+
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0px 0px 16px 16px;
+  margin-top: -25px;
+
+  box-shadow: rgba(0, 0, 0, 0.2);
+  color: #313131;
+  font-size: 20px;
+
+  transition: 0.4s ease;
+}
+
+.search-box .search-bar:focus {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.location-box .location {
+  color: #ffffff;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+
+ 
+}
+
+.location-box .date {
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+}
+
+.weather-box {
+  text-align: center;
+  
+}
+
+.weather-box .temp {
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background-color: rgba(255, 255, 255,);
+  border-radius: 16px;
+
+  padding: 15px 25px;
+
+  color: rgb(255, 255, 255);
+  font-size: 102px;
+  font-weight: 900;
+
+  background-color:rgb(255, 255, 255, 0.2);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.089),
+    rgb(195, 209, 230,0.5));
+
+    text-shadow: 1px 1px 0 rgba(109, 109, 109, 0.5), 1px 2px 0 rgba(109, 109, 109, 0.5), 1px 3px 0 rgba(109, 109, 109, 0.5), 1px 4px 0 rgba(109, 109, 109, 0.5),
+    1px 5px 0 rgba(109, 109, 109, 0.5), 1px 6px 0 rgba(109, 109, 109, 0.5), 1px 7px 0 rgba(109, 109, 109, 0.5), 1px 8px 0 rgba(109, 109, 109, 0.5),
+    5px 13px 15px rgba(109, 109, 109, 0.5);
+  text-align: center;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+
+  -webkit-box-shadow:0 0 20px rgb(0, 0, 0); 
+  -moz-box-shadow: 0 0 20px rgb(255, 255, 255); 
+  box-shadow:0 0 80px rgb(195, 209, 230);
+}
+
+.weather-box .weather {
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+}
+
+.videoTag {
+  position: fixed;
+  z-index: -1;
+  width: fit-content;
+  height: fit-content;
 }
